# AI-ATS

./: .env.example  .gitignore  2026-02-17-005146-this-session-is-being-continued-from-a-previous-co.txt  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
configs/: development.yaml  production.yaml
scripts/: matching.py
src/: __init__.py  cli.py  main.py
src/core/: __init__.py
src/core/job/: __init__.py
src/core/matching/: __init__.py  education_scorer.py  experience_scorer.py  matching_engine.py  skill_scorer.py
src/core/ranking/: __init__.py  fairness_reranker.py  ranker.py  ranking_config.py
src/data/: __init__.py  database.py
src/data/models/: __init__.py  audit.py  base.py  candidate.py  job.py  match.py  resume.py
src/data/repositories/: __init__.py  audit_repository.py  base.py  candidate_repository.py  job_repository.py  match_repository.py  resume_repository.py
src/data/sql/: __init__.py  base.py  engine.py
src/data/sql/models/: __init__.py  audit_record.py  job_record.py  match_record.py  workspace.py
src/data/sql/repositories/: __init__.py  audit_record_repo.py  base.py  job_record_repo.py  match_record_repo.py  workspace_repo.py
src/ml/: __init__.py
src/ml/embeddings/: __init__.py  embedding_model.py  embedding_service.py  semantic_similarity.py  vector_store.py
src/ml/ethics/: __init__.py  bias_detector.py  bias_mitigation.py  fairness_metrics.py  protected_attributes.py
src/ml/explainability/: __init__.py  explainer.py  feature_importance.py  lime_explainer.py  shap_explainer.py
src/ml/nlp/: __init__.py  accurate_jd_parser.py  accurate_resume_parser.py  jd_parser.py  preprocessor.py  resume_parser.py
src/ml/nlp/extractors/: __init__.py  base.py  docx_extractor.py  extractor_factory.py  pdf_extractor.py  text_extractor.py
src/ml/nlp/parsers/: __init__.py  certifications_parser.py  contact_parser.py  education_parser.py  experience_parser.py  projects_parser.py  skills_parser.py  summary_parser.py
src/services/: __init__.py  audit_service.py  export_service.py  file_validator.py  google_drive_service.py  import_service.py  ingestion_service.py  match_persistence.py
src/ui/: __init__.py  main_window.py
src/ui/dialogs/: __init__.py  import_center.py  override_score_dialog.py  workspace_dialogs.py
src/ui/resources/: __init__.py
src/ui/views/: __init__.py  analytics_view.py  base_view.py  candidates_view.py  dashboard_view.py  jobs_view.py  matching_view.py  settings_view.py
src/ui/widgets/: __init__.py  buttons.py  cards.py  tables.py
src/utils/: __init__.py  config.py  constants.py  logger.py  theme.py  workspace_state.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_persistence.py  test_ingestion_pipeline.py
tests/unit/: test_accurate_jd_parser.py  test_accurate_resume_parser.py  test_audit_service.py  test_certifications_parser.py  test_cli.py  test_constants.py  test_education_scorer.py  test_embedding_service.py  test_experience_scorer.py  test_explainability.py  test_fairness_metrics.py  test_fairness_reranker.py  test_file_validator.py  test_ingestion_service.py  test_jd_parser.py  test_job_repository_embedding.py  test_match_from_parsed.py  test_match_persistence.py  test_matching_engine.py  test_models.py  test_preprocessor.py  test_projects_parser.py  test_protected_attributes.py  test_rank_candidates.py  test_ranker.py  test_ranking_config.py  test_resume_parser.py  test_semantic_matcher_parsed.py  test_semantic_similarity.py  test_settings_persistence.py  test_skill_scorer.py  test_sql_engine.py  test_sql_models.py  test_summary_parser.py  test_vector_store.py
