[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ats"
version = "0.1.0"
description = "AI-powered Applicant Tracking System with ethical AI, explainability, and offline-first support"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Vivek Vaish", email = "vaishvivek634@gmail.com" }
]
keywords = [
    "ats",
    "applicant-tracking",
    "recruitment",
    "ai",
    "nlp",
    "machine-learning",
    "resume-parsing",
    "ethical-ai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Framework
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database
    "pymongo>=4.6.0",
    "motor>=3.3.0",  # Async MongoDB driver

    # GUI - PyQt6
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.0",  # For charts/visualizations

    # NLP & ML Core
    "spacy>=3.7.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Document Processing
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",

    # Embeddings & Vector Store
    "chromadb>=0.4.0",  # Local vector database
    "faiss-cpu>=1.7.0",  # Alternative vector search

    # Explainability
    "shap>=0.44.0",
    "lime>=0.2.0",

    # Fairness & Bias Detection
    "fairlearn>=0.10.0",
    "aif360>=0.6.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",  # Beautiful terminal output
    "typer>=0.9.0",  # CLI interface
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
]

training = [
    # Additional packages for model training (use on powerful machines)
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "wandb>=0.16.0",  # Experiment tracking
    "optuna>=3.5.0",  # Hyperparameter optimization
]

[project.scripts]
ai-ats = "src.main:main"
ai-ats-cli = "src.cli:app"

[project.gui-scripts]
ai-ats-gui = "src.ui.main_window:main"

[project.urls]
Homepage = "https://github.com/Vivekv634/ai-ats"
Documentation = "https://github.com/Vivekv634/ai-ats#readme"
Repository = "https://github.com/Vivekv634/ai-ats"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    "data/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "data/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
